# OicdChallenge

./: .envrc.example  README.md  docker-compose.yml  keycloak_admin.py  pyproject.toml
api/management/commands/: setup_keycloak.py
config/: settings.py  urls.py  views.py
management/: __init__.py
management/commands/: __init__.py  setup_keycloak.py
templates/: base.html  home.html
